--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   rxdart: ^0.24.1
   provider: ^4.3.2+2
   flat_icons_flutter: ^1.0.2
+  device_preview: ^0.5.3
 
 dev_dependencies:
   flutter_test:
